[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
name = "shodan"
version = "1.0.0"
authors = ["drlove2002"]
maintainers = ["drlove2002"]
description = "A discord bot for the Shodan API"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
uvloop = "^0.17.0"
nextcord = "^2.3.2"
flask = "^2.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
python-dotenv = "^1.0.0"

[tool.semantic_release]
branch = "master"
version_variable = ["mainbot/__init__.py:__version__","pyproject.toml:tool.poetry.version"]
version_toml = "pyproject.toml:tool.poetry.version"
upload_to_pypi = false
upload_to_release = false
changelog_sections = "refactor, style, docs, breaking, feature, fix"